# LibAnimateAtlas

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/AnimView/: CMakeLists.txt
examples/AnimView/assets/demo/SML-BetterAtlas/: Animation.json  metadata.json  spritemap1.json
examples/AnimView/src/: Main.cpp
examples/AnimView/src/Animation/: AnimationAsset.h  AnimationPlayer.cpp  AnimationPlayer.h
examples/AnimView/src/Core/: Application.cpp  Application.h  Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h  Window.cpp  Window.h
examples/AnimView/src/GUI/: GUIHandler.h
examples/AnimView/src/Panels/: LibraryView.h  TestPanel.h
examples/AnimView/src/UI/: UILayer.cpp  UILayer.h
examples/AnimView/src/UI/Panels/: InspectorPanel.cpp  InspectorPanel.h  LibraryPanel.cpp  LibraryPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SpriteMapPanel.cpp  SpriteMapPanel.h  TimelinePanel.cpp  TimelinePanel.h  ViewportPanel.cpp  ViewportPanel.h
examples/ParsingTest/: CMakeLists.txt
examples/ParsingTest/assets/Balltest-animate/: Animation.json  spritemap1.json
examples/ParsingTest/assets/Balltest-bta/: Animation.json  spritemap1.json
examples/ParsingTest/assets/MultiEleTest-bta/: Animation.json  metadata.json  spritemap1.json
examples/ParsingTest/assets/SML-BetterAtlas/: spritemap1.json
examples/ParsingTest/src/: Main.cpp
include/AnimateAtlas/Animation/: Frame.h  Keyframe.h  Layer.h  Timeline.h
include/AnimateAtlas/Animation/Element/: ElementBase.h
include/AnimateAtlas/Animation/Timeline/: Frame.h  Layer.h  Timeline.h
include/AnimateAtlas/Core/Data/: AnimateData.h
include/AnimateAtlas/Core/Display/: AtlasSprite.h  Button.h  DisplayObject.h  MovieClip.h  Symbol.h
include/AnimateAtlas/Core/Experimental/: TestParse.h
include/AnimateAtlas/Core/Math/: Matrix2D.h  Rect.h
include/AnimateAtlas/Core/Models/: AnimationData.h  SpriteMapData.h
include/AnimateAtlas/Core/Timeline/: Frame.h  Layer.h  Timeline.h
include/AnimateAtlas/Elements/: ElementBase.h
include/AnimateAtlas/Experimental/: TestParse.h
include/AnimateAtlas/Interop/: GLM.h
src/Core/: AnimateData.cpp
src/Core/Display/: AtlasSprite.cpp
src/Core/Experimental/: TestParse.cpp
src/Core/Internal/: JsonUtils.h
src/Core/Models/: AnimationData.cpp  SpriteMapData.cpp
src/Experimental/: TestParse.cpp
src/Internal/: JsonUtils.h
src/Internal/Parsing/: AnimationData.cpp  AnimationData.h  MetaData.cpp  MetaData.h  SpriteMapData.cpp  SpriteMapData.h
